--- a/src/components/Draggable.css
+++ b/src/components/Draggable.css
@@ -1,17 +1,51 @@
+.draggable-wrap {
+  position: relative;
+  height: 400px;
+  background: red;
+}
+
+/* move this styles to js file ??? */
 .draggable {
+  z-index: 999;
+
+}
+
+.draggable-body-one,
+.draggable-body-two {
   position: absolute;
-  bottom: 23%;
-  left: 13%;
+}
+
+.draggable-body-one {
+  top: 16%;
+  left: 15%;
+}
+
+.draggable-body-two {
+  top: 48%;
+  left: 35%;
+}
+
+.draggable-transform-one,
+.draggable-transform-two {
+  cursor: grab;
   background-color: black;
-  border-radius: 100px;
-  transform: rotate(-15deg);
-  width: 192px;
-  height: 192px;
-  padding: 25px;
+  color: white;
+  border-radius: 50%;
+  padding: 20px;
+  text-align: center;
   display: flex;
   align-items: center;
-  cursor: grab;
-  user-select: none;
-  z-index: 999;
-  will-change: transform;
+  justify-content: center;
+}
+
+.draggable-transform-one {
+  transform: rotate(-13deg);
+  width: 240px;
+  height: 160px;
+}
+
+.draggable-transform-two {
+  transform: rotate(10deg);
+  width: 200px;
+  height: 120px;
 }
