--- a/src/components/ShuffleChars.css
+++ b/src/components/ShuffleChars.css
@@ -1,6 +1,3 @@
-.shuffle-chars {
- 
-}
 .shuffle-chars-row {
   display: grid;
   grid-template-columns: 1fr 5fr 2fr;
@@ -8,6 +5,7 @@
 
 .shuffle-chars-elem {
   text-transform: uppercase;
+  font-weight: 600;
 }
 
 .shuffle-chars-elem:last-of-type {
